core: port to uwsgi, drop subprocess dependency, prettify

--- a/templates/created.html
+++ b/templates/created.html
@@ -21,7 +21,7 @@
             <div class="input-group mb-3">
                 <span class="input-group-text d-block text-center" style="width: 100px">Username</span>
                 <!-- <input type="text" class="form-control font-monospace text-bg-light" id="username" value="{{ username }}" readonly disabled> -->
-                <span class="form-control font-monospace text-bg-light text-start">Coucou</span>
+                <span class="form-control font-monospace text-bg-light text-start">{{ username }}</span>
             </div>
 
             <div class="input-group mb-3">
