template: update wireless name with network update

--- a/templates/created.html
+++ b/templates/created.html
@@ -15,7 +15,7 @@
 
             <div class="input-group mb-4">
                 <span class="input-group-text d-block text-center" style="width: 100px">Network</span>
-                <input type="text" class="form-control font-monospace text-bg-light" id="network" value="Maxux Network (5.2G)" readonly disabled>
+                <input type="text" class="form-control font-monospace text-bg-light" id="network" value="Maxux Network" readonly disabled>
             </div>
 
             <div class="input-group mb-3">
